WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147585
[iOS] Link previews sometimes don't hide the link highlight
https://bugs.webkit.org/show_bug.cgi?id=147585
Summary
[iOS] Link previews sometimes don't hide the link highlight
Tim Horton
Reported
2015-08-03 13:18:42 PDT
[iOS] Link previews sometimes don't hide the link highlight
Attachments
Patch
(2.95 KB, patch)
2015-08-03 13:19 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-08-03 13:19:03 PDT
Created
attachment 258104
[details]
Patch
Tim Horton
Comment 2
2015-08-03 13:24:13 PDT
http://trac.webkit.org/changeset/187756
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug