Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm
@@ -3361,18 +3361,22 @@ static bool isAssistableInputType(InputType type)
 
 }
 
-- (void)_previewItemController:(UIPreviewItemController *)controller willPresentPreview:(UIViewController *)viewController forPosition:(CGPoint)position inSourceView:(UIView *)sourceView
+- (void)_interactionStartedFromPreviewItemController:(UIPreviewItemController *)controller
 {
     [self _removeDefaultGestureRecognizers];
 
     [self _cancelInteraction];
 }
 
-- (void)_previewItemController:(UIPreviewItemController *)controller didDismissPreview:(UIViewController *)viewController committing:(BOOL)committing
+- (void)_interactionStoppedFromPreviewItemController:(UIPreviewItemController *)controller
 {
     [self _addDefaultGestureRecognizers];
-    _page->stopInteraction();
 
+    _page->stopInteraction();
+}
+
+- (void)_previewItemController:(UIPreviewItemController *)controller didDismissPreview:(UIViewController *)viewController committing:(BOOL)committing
+{
     id<WKUIDelegatePrivate> uiDelegate = static_cast<id <WKUIDelegatePrivate>>([_webView UIDelegate]);
     if ([uiDelegate respondsToSelector:@selector(_webView:didDismissPreviewViewController:committing:)])
         [uiDelegate _webView:_webView didDismissPreviewViewController:viewController committing:committing];
